--- a/accountapp/pom.xml
+++ b/accountapp/pom.xml
@@ -3,4 +3,28 @@
   <groupId>com.qa.account</groupId>
   <artifactId>accountapp</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <dependencies>
+  <dependency>
+  <groupId>com.fasterxml.jackson.core</groupId>
+  <artifactId>jackson-core</artifactId>
+  <version>2.9.6</version>
+</dependency>
+
+
+<dependency>
+  <groupId>com.fasterxml.jackson.core</groupId>
+  <artifactId>jackson-annotations</artifactId>
+  <version>2.9.6</version>
+</dependency>
+
+<dependency>
+  <groupId>com.fasterxml.jackson.core</groupId>
+  <artifactId>jackson-databind</artifactId>
+  <version>2.9.6</version>
+</dependency>
+  
+  </dependencies>
+  
+  
 </project>
